Webapp: prevent rewrapping the Manager name in the header
Longer names could get rewrapped, but there is not enough vertical space
for this. Now rewrapping is prevented. Of course a very long name can still
cause layout issues, but at least now slightly-long names work fine.

--- a/web/app/src/assets/base.css
+++ b/web/app/src/assets/base.css
@@ -244,6 +244,7 @@ header nav {
 
 .navbar-brand {
   margin-right: var(--spacer);
+  text-wrap: nowrap;
 }
 
 nav > ul {
